chapter3/3-3/nodeport-demo.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: nodeport-deploy
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx 
    spec:
      containers:
      - name: my-nginx
        image: nginx
---
apiVersion: v1
kind: Service
metadata:
  name: nodeport-svc
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
